# programming-projects

./: 4.c  README.md
asm/: README.md
bigint/: BigTest.java  HugeInteger.java  TestHugeInteger.java
chip-8/C/: Makefile  bin  chip8.c  file_handling.c  file_handling.h  vm.c  vm.h
datastructs/: Makefile  README.md  linked_list.c  linked_list.rs  todo_datastructures
digital_logic/: double_digit_tff.circ
fft/: README.md  running_implementations.md
fft/C/: Makefile  Makefile_fftw  constants.h  drawing.c  drawing.h  fft.c  fft.h  fft_sdl_fftw.c  fft_sdl_kissfft.c  glfw_mpd.c  glfw_mpd.h  reading.c
fft/C++/: Makefile  drawing.cc  drawing.h  mpd.cc  mpd.h  reading.cc  reading.h
fft/Haskell/: Makefile  mpd-display.hs
fft/Java/: Drawing.java  MpdDisplay.java  MpdReader.java  Signal.java
fft/Lisp/: glfw_display.lisp  (+1 more)
fft/Rust/: Cargo.toml  build.rs
fft/Rust/src/: draw.rs  fft.rs  lib.rs  main.rs  read.rs
g-challenges/: 00-name-generator.rkt  01-higher-lower.rkt  02-temperature-converter.hs  README.md
game-of-life/: Life.java  game-of-life.pde  gol.pde  gol.py
oled_gps/: README.md  ds3231.c  ds3231.h  font.h  gps.h  oled_gps.c  oled_gps.ino  printf.c  printf.h  ssd1306.c  ssd1306.h
pid-platformer/: design_notes.txt  rocket.py  server.py
rice/: autorun.sh  dot_Xresources  dot_vimrc  dot_xmodmap  xorg.conf
scripts/: 555timer.py  README.md  change_punct.py  conus_dl.sh  gasmileage.py  split_chapters.py  steel.py  timezones.py  yt.rb
vc0706-tester/: Makefile  ports.c  ports.h  readme.md  termios_conf.c  termios_conf.h  vc0706_test.c  vc0706_test.h
(+55 files in other folders)
