[package]

name = "mpd_display"
version = "0.0.1"
authors = ["Jim Rustle <jim_rustle@live.com>"]
build = "build.rs"

[build-dependencies]
gl_generator = "*"
khronos_api = "*"

[dependencies]
libc = "*"
byteorder = "*"

[dependencies.gl_generator]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

